loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:4: error: '(' expected but identifier found.
for k <- 1 to 8 {
    ^